# ronin

./: .gitignore  POC_SUMMARY.md  PROJECT_STRUCTURE.md  poc_quick_test.sh  pyproject.toml  test_cuda_poc.py  thesis_ai_test.context
clr_lists/: README.md
clr_source/: README.md
experiments/: README.md
source/: ronin_lstm_tcn.py
