[project]
name = "ronin-clr"
version = "0.1.0"
description = "RoNIN: Robust Neural Inertial Navigation for CLR project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "pandas>=1.1.0",
    "h5py>=2.10.0",
    "numpy-quaternion>=2021.11.4.15.26.3",
    "matplotlib>=3.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tensorboardX>=2.5.0",
    "numba>=0.53.0",
    "plyfile>=0.7.4",
    "tqdm>=4.62.0",
    "scikit-learn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
